#cmph library

SET (CMPH_LIB_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/bdz.c
	${CMAKE_CURRENT_SOURCE_DIR}/bdz.h
	${CMAKE_CURRENT_SOURCE_DIR}/bdz_ph.c
	${CMAKE_CURRENT_SOURCE_DIR}/bdz_ph.h
	${CMAKE_CURRENT_SOURCE_DIR}/bdz_structs.h
	${CMAKE_CURRENT_SOURCE_DIR}/bdz_structs_ph.h
	${CMAKE_CURRENT_SOURCE_DIR}/bitbool.h
	${CMAKE_CURRENT_SOURCE_DIR}/bm_numbers.c
	${CMAKE_CURRENT_SOURCE_DIR}/bmz8.c
	${CMAKE_CURRENT_SOURCE_DIR}/bmz8.h
	${CMAKE_CURRENT_SOURCE_DIR}/bmz8_structs.h
	${CMAKE_CURRENT_SOURCE_DIR}/bmz.c
	${CMAKE_CURRENT_SOURCE_DIR}/bmz.h
	${CMAKE_CURRENT_SOURCE_DIR}/bmz_structs.h
	${CMAKE_CURRENT_SOURCE_DIR}/brz.c
	${CMAKE_CURRENT_SOURCE_DIR}/brz.h
	${CMAKE_CURRENT_SOURCE_DIR}/brz_structs.h
	${CMAKE_CURRENT_SOURCE_DIR}/buffer_entry.c
	${CMAKE_CURRENT_SOURCE_DIR}/buffer_entry.h
	${CMAKE_CURRENT_SOURCE_DIR}/buffer_manager.c
	${CMAKE_CURRENT_SOURCE_DIR}/buffer_manager.h
	${CMAKE_CURRENT_SOURCE_DIR}/chd.c
	${CMAKE_CURRENT_SOURCE_DIR}/chd.h
	${CMAKE_CURRENT_SOURCE_DIR}/chd_ph.c
	${CMAKE_CURRENT_SOURCE_DIR}/chd_ph.h
	${CMAKE_CURRENT_SOURCE_DIR}/chd_structs.h
	${CMAKE_CURRENT_SOURCE_DIR}/chd_structs_ph.h
	${CMAKE_CURRENT_SOURCE_DIR}/chm.c
	${CMAKE_CURRENT_SOURCE_DIR}/chm.h
	${CMAKE_CURRENT_SOURCE_DIR}/chm_structs.h
	${CMAKE_CURRENT_SOURCE_DIR}/cmph_benchmark.c
	${CMAKE_CURRENT_SOURCE_DIR}/cmph_benchmark.h
	${CMAKE_CURRENT_SOURCE_DIR}/cmph.c
	${CMAKE_CURRENT_SOURCE_DIR}/cmph.h
	${CMAKE_CURRENT_SOURCE_DIR}/cmph_structs.c
	${CMAKE_CURRENT_SOURCE_DIR}/cmph_structs.h
	${CMAKE_CURRENT_SOURCE_DIR}/cmph_time.h
	${CMAKE_CURRENT_SOURCE_DIR}/cmph_types.h
	${CMAKE_CURRENT_SOURCE_DIR}/compressed_rank.c
	${CMAKE_CURRENT_SOURCE_DIR}/compressed_rank.h
	${CMAKE_CURRENT_SOURCE_DIR}/compressed_seq.c
	${CMAKE_CURRENT_SOURCE_DIR}/compressed_seq.h
	${CMAKE_CURRENT_SOURCE_DIR}/debug.h
	${CMAKE_CURRENT_SOURCE_DIR}/fch_buckets.c
	${CMAKE_CURRENT_SOURCE_DIR}/fch_buckets.h
	${CMAKE_CURRENT_SOURCE_DIR}/fch.c
	${CMAKE_CURRENT_SOURCE_DIR}/fch.h
	${CMAKE_CURRENT_SOURCE_DIR}/fch_structs.h
	${CMAKE_CURRENT_SOURCE_DIR}/graph.c
	${CMAKE_CURRENT_SOURCE_DIR}/graph.h
	${CMAKE_CURRENT_SOURCE_DIR}/hash.c
	${CMAKE_CURRENT_SOURCE_DIR}/hash.h
	${CMAKE_CURRENT_SOURCE_DIR}/hash_state.h
	${CMAKE_CURRENT_SOURCE_DIR}/jenkins_hash.c
	${CMAKE_CURRENT_SOURCE_DIR}/jenkins_hash.h
	${CMAKE_CURRENT_SOURCE_DIR}/linear_string_map.c
	${CMAKE_CURRENT_SOURCE_DIR}/linear_string_map.h
	${CMAKE_CURRENT_SOURCE_DIR}/miller_rabin.c
	${CMAKE_CURRENT_SOURCE_DIR}/miller_rabin.h
	${CMAKE_CURRENT_SOURCE_DIR}/select.c
	${CMAKE_CURRENT_SOURCE_DIR}/select.h
	${CMAKE_CURRENT_SOURCE_DIR}/select_lookup_tables.h
	${CMAKE_CURRENT_SOURCE_DIR}/vqueue.c
	${CMAKE_CURRENT_SOURCE_DIR}/vqueue.h
	${CMAKE_CURRENT_SOURCE_DIR}/vstack.c
	${CMAKE_CURRENT_SOURCE_DIR}/vstack.h
	${CMAKE_CURRENT_SOURCE_DIR}/wingetopt.c
	${CMAKE_CURRENT_SOURCE_DIR}/wingetopt.h
  )

ADD_LIBRARY(${CMPH_LIBRARIES} ${LINKING_MODE}
	${CMPH_LIB_SRCS}
)

target_link_libraries(${CMPH_LIBRARIES}
	${BLAS_LIBRARIES}
)

INSTALL(TARGETS ${CMPH_LIBRARIES} RUNTIME DESTINATION bin LIBRARY DESTINATION bin ARCHIVE DESTINATION bin)

